# sara

./: .gitignore  Dockerfile  Makefile  README.md  catalog-info.yaml  docker-compose.yaml  sara.sln
.github/workflows/: backend_lint_and_test.yml  compile_python_requirements_and_create_pr.yml  deploy_to_development.yml  deploy_to_staging.yml  frontend_dependency_security_fix.yml  frontend_lint_and_test.yml  (+20 more)
api/: .env.example  Program.cs  api.csproj  api.sln  appsettings.Development.json  appsettings.Local.json  appsettings.Production.json  appsettings.Staging.json  appsettings.json
api.Tests/: AnalysisMappingController.cs  README.md  TestAuthHandler.cs  TestSetupHelpers.cs  TestWebApplicationFactory.cs  api.test.csproj  appsettings.Test.json
docs/: database_and_migrations.md  deploying_resources.md  formatting.md
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
infrastructure-as-code/: deploy-ida.sh  policy.json
mocks/: argo_workflow_mock.py  stid_upload_workflow_mock.py
various/: docker-compose.nginx.yaml  nginx.conf
workflow-notifier/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
workflow-notifier/mocks/: argo_workflow_mock.py
workflow-notifier/src/workflow_notifier/: anonymizer.py  app.py  cloe.py  commands.py  fencilla.py  notifier.py  thermal_reading.py
workflow-notifier/src/workflow_notifier/config/: open_telemetry.py  settings.py
workflow-notifier/tests/: conftest.py  test_main.py  test_notifier.py  test_settings.py
(+239 files in other folders)
