[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow_notifier"
authors = [{ name = "Equinor ASA", email = "fg_robots_dev@equinor.com" }]
description = "Workflow Notifier"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-dotenv",
    "typer~=0.14",
    "requests~=2.32",
    "msal~=1.31",
    "pydantic",
    "pydantic-settings",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/equinor/sara/workflow-notifier"

[project.optional-dependencies]
dev = ["black", "isort", "mypy", "flask", "pydantic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true

[tool.mypy]
no_strict_optional = true
no_site_packages = true
ignore_missing_imports = true
exclude = ["build"]
files = ["src", "tests"]

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.black]
line_length = 88
